--- a/components/Slides.html
+++ b/components/Slides.html
@@ -621,7 +621,9 @@
             </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Default value : </i><code>input&lt;boolean, Attr&lt;boolean&gt;&gt;(false, {transform: booleanAttribute})</code>
+                        <i>Default value : </i><code>input&lt;boolean, Attr&lt;boolean&gt;&gt;(false, {
+    transform: booleanAttribute,
+  })</code>
                     </td>
                 </tr>
 
@@ -664,7 +666,9 @@
             </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Default value : </i><code>input&lt;boolean, Attr&lt;boolean&gt;&gt;(false, {transform: booleanAttribute})</code>
+                        <i>Default value : </i><code>input&lt;boolean, Attr&lt;boolean&gt;&gt;(false, {
+    transform: booleanAttribute,
+  })</code>
                     </td>
                 </tr>
 
@@ -729,7 +733,7 @@
             </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Default value : </i><code>input&lt;number, Attr&lt;number&gt;&gt;(0, {transform: numberAttribute})</code>
+                        <i>Default value : </i><code>input&lt;number, Attr&lt;number&gt;&gt;(0, { transform: numberAttribute })</code>
                     </td>
                 </tr>
 
@@ -750,7 +754,9 @@
             </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Default value : </i><code>input&lt;number, Attr&lt;number&gt;&gt;(5000, {transform: numberAttribute})</code>
+                        <i>Default value : </i><code>input&lt;number, Attr&lt;number&gt;&gt;(5000, {
+    transform: numberAttribute,
+  })</code>
                     </td>
                 </tr>
 
@@ -772,7 +778,7 @@
             </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Default value : </i><code>signal&lt;string&gt;(&#x27;&#x27;)</code>
+                        <i>Default value : </i><code>signal&lt;string&gt;(&quot;&quot;)</code>
                     </td>
                 </tr>
 
@@ -794,7 +800,9 @@
             </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Default value : </i><code>signal&lt;string&gt;(&#x27;xpr-slides-notification&#x27;)</code>
+                        <i>Default value : </i><code>signal&lt;string&gt;(
+    &quot;xpr-slides-notification&quot;,
+  )</code>
                     </td>
                 </tr>
 
